src-tauri/build3.log
    Checking brisas-app v0.1.0 (C:\Users\femprobrisas\proyecto-brisas\Rust\brisas-app\src-tauri)
error[E0308]: mismatched types
   --> src\db\contratista_queries.rs:120:8
    |
120 |     Ok(row.count)
    |     -- ^^^^^^^^^ expected `i64`, found `i32`
    |     |
    |     arguments to this enum variant are incorrect
    |
help: the type constructed contains `i32` due to the type of the argument passed
   --> src\db\contratista_queries.rs:120:5
    |
120 |     Ok(row.count)
    |     ^^^---------^
    |        |
    |        this argument influences the type of `Ok`
note: tuple variant defined here
   --> C:\Users\femprobrisas\.rustup\toolchains\stable-x86_64-pc-windows-gnu\lib/rustlib/src/rust\library\core\src\result.rs:554:5
    |
554 |     Ok(#[stable(feature = "rust1", since = "1.0.0")] T),
    |     ^^
help: you can convert an `i32` to an `i64`
    |
120 |     Ok(row.count.into())
    |                 +++++++

error[E0308]: mismatched types
   --> src\db\contratista_queries.rs:132:8
    |
132 |     Ok(row.count)
    |     -- ^^^^^^^^^ expected `i64`, found `i32`
    |     |
    |     arguments to this enum variant are incorrect
    |
help: the type constructed contains `i32` due to the type of the argument passed
   --> src\db\contratista_queries.rs:132:5
    |
132 |     Ok(row.count)
    |     ^^^---------^
    |        |
    |        this argument influences the type of `Ok`
note: tuple variant defined here
   --> C:\Users\femprobrisas\.rustup\toolchains\stable-x86_64-pc-windows-gnu\lib/rustlib/src/rust\library\core\src\result.rs:554:5
    |
554 |     Ok(#[stable(feature = "rust1", since = "1.0.0")] T),
    |     ^^
help: you can convert an `i32` to an `i64`
    |
132 |     Ok(row.count.into())
    |                 +++++++

error[E0308]: mismatched types
   --> src\db\contratista_queries.rs:149:8
    |
149 |     Ok(row.count)
    |     -- ^^^^^^^^^ expected `i64`, found `i32`
    |     |
    |     arguments to this enum variant are incorrect
    |
help: the type constructed contains `i32` due to the type of the argument passed
   --> src\db\contratista_queries.rs:149:5
    |
149 |     Ok(row.count)
    |     ^^^---------^
    |        |
    |        this argument influences the type of `Ok`
note: tuple variant defined here
   --> C:\Users\femprobrisas\.rustup\toolchains\stable-x86_64-pc-windows-gnu\lib/rustlib/src/rust\library\core\src\result.rs:554:5
    |
554 |     Ok(#[stable(feature = "rust1", since = "1.0.0")] T),
    |     ^^
help: you can convert an `i32` to an `i64`
    |
149 |     Ok(row.count.into())
    |                 +++++++

error[E0599]: no method named `unwrap_or_default` found for struct `std::string::String` in the current scope
   --> src\db\contratista_queries.rs:193:50
    |
193 |                 empresa_nombre: r.empresa_nombre.unwrap_or_default(),
    |                                                  ^^^^^^^^^^^^^^^^^ method not found in `std::string::String`

error[E0308]: mismatched types
   --> src\db\contratista_queries.rs:194:32
    |
194 |                 vehiculo_tipo: r.tipo_vehiculo,
    |                                ^^^^^^^^^^^^^^^ expected `Option<String>`, found `String`
    |
    = note: expected enum `std::option::Option<std::string::String>`
             found struct `std::string::String`
help: try wrapping the expression in `Some`
    |
194 |                 vehiculo_tipo: Some(r.tipo_vehiculo),
    |                                +++++               +

error[E0308]: mismatched types
   --> src\db\contratista_queries.rs:195:33
    |
195 |                 vehiculo_placa: r.placa,
    |                                 ^^^^^^^ expected `Option<String>`, found `String`
    |
    = note: expected enum `std::option::Option<std::string::String>`
             found struct `std::string::String`
help: try wrapping the expression in `Some`
    |
195 |                 vehiculo_placa: Some(r.placa),
    |                                 +++++       +

error[E0308]: mismatched types
   --> src\db\contratista_queries.rs:199:29
    |
199 |                 is_blocked: r.is_blocked,
    |                             ^^^^^^^^^^^^ expected `bool`, found `Option<bool>`
    |
    = note: expected type `bool`
               found enum `std::option::Option<bool>`
help: consider using `Option::expect` to unwrap the `std::option::Option<bool>` value, panicking if the value is an `Option::None`
    |
199 |                 is_blocked: r.is_blocked.expect("REASON"),
    |                                         +++++++++++++++++

error[E0599]: no method named `unwrap_or_default` found for struct `std::string::String` in the current scope
   --> src\db\contratista_queries.rs:247:50
    |
247 |                 empresa_nombre: r.empresa_nombre.unwrap_or_default(),
    |                                                  ^^^^^^^^^^^^^^^^^ method not found in `std::string::String`

error[E0308]: mismatched types
   --> src\db\contratista_queries.rs:248:32
    |
248 |                 vehiculo_tipo: r.tipo_vehiculo,
    |                                ^^^^^^^^^^^^^^^ expected `Option<String>`, found `String`
    |
    = note: expected enum `std::option::Option<std::string::String>`
             found struct `std::string::String`
help: try wrapping the expression in `Some`
    |
248 |                 vehiculo_tipo: Some(r.tipo_vehiculo),
    |                                +++++               +

error[E0308]: mismatched types
   --> src\db\contratista_queries.rs:249:33
    |
249 |                 vehiculo_placa: r.placa,
    |                                 ^^^^^^^ expected `Option<String>`, found `String`
    |
    = note: expected enum `std::option::Option<std::string::String>`
             found struct `std::string::String`
help: try wrapping the expression in `Some`
    |
249 |                 vehiculo_placa: Some(r.placa),
    |                                 +++++       +

error[E0308]: mismatched types
   --> src\db\contratista_queries.rs:253:29
    |
253 |                 is_blocked: r.is_blocked,
    |                             ^^^^^^^^^^^^ expected `bool`, found `Option<bool>`
    |
    = note: expected type `bool`
               found enum `std::option::Option<bool>`
help: consider using `Option::expect` to unwrap the `std::option::Option<bool>` value, panicking if the value is an `Option::None`
    |
253 |                 is_blocked: r.is_blocked.expect("REASON"),
    |                                         +++++++++++++++++

error[E0599]: no method named `unwrap_or_default` found for struct `std::string::String` in the current scope
   --> src\db\contratista_queries.rs:298:34
    |
298 |                 r.empresa_nombre.unwrap_or_default(),
    |                                  ^^^^^^^^^^^^^^^^^ method not found in `std::string::String`

error[E0599]: no method named `unwrap_or_default` found for struct `std::string::String` in the current scope
   --> src\db\contratista_queries.rs:348:34
    |
348 |                 r.empresa_nombre.unwrap_or_default(),
    |                                  ^^^^^^^^^^^^^^^^^ method not found in `std::string::String`

Some errors have detailed explanations: E0308, E0599.
For more information about an error, try `rustc --explain E0308`.
error: could not compile `brisas-app` (lib) due to 13 previous errors
